# libcopyfile

./: .gitignore  Makefile.am  configure.ac
data/: libcopyfile.pc.in
src/: common.h  copyfile-archive-file-dedup.c  copyfile-archive-file.c  copyfile-clone-file.c  copyfile-clone-stream.c  copyfile-copy-acl.c  copyfile-copy-cap.c  copyfile-copy-file.c  copyfile-copy-metadata.c  copyfile-copy-regular.c  copyfile-copy-stream.c  copyfile-copy-symlink.c  copyfile-copy-xattr.c  copyfile-create-special.c  copyfile-error-message.c  copyfile-link-file-dedup.c  copyfile-link-file.c  copyfile-move-file-dedup.c  copyfile-move-file.c  copyfile-set-stat.c  copyfile.c  copyfile.h  libcopyfile.h
util/: copyfile.c
